updates docs
