# swaggerdocs/swagger.yaml
@@ -35,6 +35,37 @@ paths:
       summary: swagger REST documentation
       tags:
       - apimeta
+  /api/token/{app}:
+    get:
+      description: If no authorization files are available, "noauth" is default for
+        the user.
+      operationId: getAppToken
+      parameters:
+      - description: application name
+        in: path
+        name: app
+        required: true
+        schema:
+          type: string
+      - in: body
+        name: body
+        required: true
+        schema:
+          properties:
+            token:
+              description: JWT token
+              type: string
+          required:
+          - token
+          type: object
+      responses:
+        "200":
+          description: successful operation
+      security:
+      - Bearer: []
+      summary: Returns JWT for given application
+      tags:
+      - application
   /login:
     get:
       description: Login user redirecting to profile
@@ -81,37 +112,6 @@ paths:
       summary: Returns JWT user bearer token
       tags:
       - user
-  /token/{app}:
-    get:
-      description: If no authorization files are available, "noauth" is default for
-        the user.
-      operationId: getAppToken
-      parameters:
-      - description: application name
-        in: path
-        name: app
-        required: true
-        schema:
-          type: string
-      - in: body
-        name: body
-        required: true
-        schema:
-          properties:
-            token:
-              description: JWT token
-              type: string
-          required:
-          - token
-          type: object
-      responses:
-        "200":
-          description: successful operation
-      security:
-      - Bearer: []
-      summary: Returns JWT for given application
-      tags:
-      - application
 security:
 - Bearer: []
 securityDefinitions:
